tests/pass/LogicalRightShift.java
// File 	: LogicalRightShift.java
// Created 	: 05.03.2020
// Author 	: Ahmed Khalil

package pass;

public class LogicalRightShift {
	static public int logicalrightshift(int x, int y){
		return x >>> y;
	}
}