tests/fail/LogicalRightShift.java
// File 	: LogicalRightShift.java
// Created 	: 05.03.2020
// Author 	: Ahmed Khalil

package fail;

import java.lang.System;

public class LogicalRightShift {
	public static void main(String[] args) {
		System.out.println('a' >>> 42);
	}
}